vlib/v/parser/tests/embed_file_nested_match_sql_named_condition_err.vv
fn yes() bool {
	return true
}

fn main() {
	fallback := $embed_file(@FILE)
	embedded := if yes() {
		match sql {
			0 { $embed_file(@FILE) }
			else { fallback }
		}
	} else {
		fallback
	}
	assert embedded.len > 0
}
